--- a/src/business.html
+++ b/src/business.html
@@ -95,10 +95,12 @@
           </nav>
         </div>
         <header>
-          <h1>
-            <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
-            TO PLACE
-          </h1>
+          <a href="./index.html">
+            <h1>
+              <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
+              TO PLACE
+            </h1>
+          </a>
           <button class="menu-btn"></button>
         </header>
         <main class="top-business">
