--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
         </nav>
       </div>
       <header class="header-top">
-        <a href="#">
+        <a href="./index.html">
           <h1>
             <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
             TO PLACE
