2回目訪問バグ修正

--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,11 @@
   <link rel="icon" href="./assets/images/toplace-favicon.ico" type="image/x-icon">
 </head>
 <body class="no-scroll top-page">
-  <div class="loading-screen" style="position: fixed; width: 100vw; height: 100vh; background: black; z-index: 9999999; justify-content: center; align-items: center; color: white;">
+  <div class="loading-screen initial-hidden">
     <div class="loading-text">0%</div>
   </div>
 
-  <div class="container">
+  <div class="container initial-hidden">
     <div class="btn-wrapper">
       <h1>
         <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
