--- a/src/policy.html
+++ b/src/policy.html
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li>
-              <a class="text-stroke-fill-ltr" data-fill="GET IN TOUCH">GET IN TOUCH
+              <a href="mailto:info@to-place.co.jp" class="text-stroke-fill-ltr" data-fill="GET IN TOUCH">GET IN TOUCH
                 <div class="hover-reveal image01">
                   <img src="./assets/images/menu/menu-get.jpeg" alt="" class="hidden-img">
                 </div>
