--- a/src/about.html
+++ b/src/about.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO PLACE株式会社|会社概要ページ</title>
+    <title>株式会社TO PLACE|会社概要ページ</title>
     <meta name="description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-    <meta name="author" content="TO PLACE株式会社">
+    <meta name="author" content="株式会社TO PLACE">
     <meta name="robots" content="index, follow">
     <!-- Facebook Meta Tags -->
-    <meta property="og:title" content="TO PLACE株式会社">
+    <meta property="og:title" content="株式会社TO PLACE">
     <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta property="og:image" content="./assets/images/top/hero-image-01.webp">
     <meta property="og:url" content="https://to-place.co.jp">
     <meta property="og:type" content="website">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="TO PLACE株式会社">
+    <meta name="twitter:title" content="株式会社TO PLACE">
     <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta name="twitter:image" content="./assets/images/top/hero-image-01.webp">
     <!-- Canonical URL -->
@@ -124,7 +124,7 @@
                 <li>ABOUT US</li>
               </ol>
             </nav>
-            <img src="./assets/images/about/about-hero.webp" alt="会社概要ヒーロー画像|TO PLACE株式会社">
+            <img src="./assets/images/about/about-hero.webp" alt="会社概要ヒーロー画像|株式会社TO PLACE">
           </div>
           <div class="about-info">
             <h2 class="text-effect">会社概要</h2>
@@ -137,11 +137,11 @@
             <div class="about-info2">
               <dl>
                 <dt>商号</dt>
-                <dd>TO PLACE株式会社</dd>
+                <dd>株式会社TO PLACE</dd>
               </dl>
               <dl>
                 <dt>代表者</dt>
-                <dd>代表取締役　坂本 絢子</dd>
+                <dd>代表取締役 坂本 絢子</dd>
               </dl>
               <dl>
                 <dt>事業内容</dt>
@@ -151,11 +151,11 @@
               </dl>
               <dl>
                 <dt>資本金</dt>
-                <dd>2０００万円</dd>
+                <dd>2,000万円</dd>
               </dl>
               <dl>
                 <dt>宅建業免許</dt>
-                <dd>東京都知事（1）第109409号</dd>
+                <dd>東京都知事(1)第109409号</dd>
               </dl>
               <dl>
                 <dt>所属団体</dt>
@@ -175,7 +175,7 @@
               <dl>
                 <dt>所在地</dt>
                 <dd>150-0013<br>
-                  東京都渋谷区恵比寿1-8-6　共同ビル7階</dd>
+                  東京都渋谷区恵比寿1-8-6 共同ビル7階</dd>
               </dl>
               <dl>
                 <dt>代表番号</dt>
@@ -211,7 +211,7 @@
             <section class="left-section">
               <h2><img src="./assets/images/footer/footer-logo.png" alt=""></h2>
               <a href="./policy.html">プライバシーポリシー</a>
-              <p>&copy;TO PLACE株式会社</p>
+              <p>&copy;株式会社TO PLACE</p>
             </section>
             <section class="right-section">
               <dl>
@@ -222,15 +222,15 @@
               </dl>
               <dl>
                 <dt>宅建業免許</dt>
-                <dd>東京都知事（１）第１０９４０９号</dd>
+                <dd>東京都知事(1)第109409号</dd>
               </dl>
               <dl>
                 <dt>所在地</dt>
-                <dd>東京都渋谷区恵比寿１－８－６　共同ビル７階</dd>
+                <dd>東京都渋谷区恵比寿1-8-6共同ビル7階</dd>
               </dl>
                 <dl>
                   <dt>代表番号</dt>
-                  <dd>０３－６８２４－６３６８</dd>
+                  <dd>03-6824-6368</dd>
                 </dl>
             </section>
           </section>
