--- a/src/careers.html
+++ b/src/careers.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO PLACE株式会社|採用情報ページ</title>
+    <title>株式会社TO PLACE|採用情報ページ</title>
     <meta name="description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-    <meta name="author" content="TO PLACE株式会社">
+    <meta name="author" content="株式会社TO PLACE">
     <meta name="robots" content="index, follow">
     <!-- Facebook Meta Tags -->
-    <meta property="og:title" content="TO PLACE株式会社">
+    <meta property="og:title" content="株式会社TO PLACE">
     <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta property="og:image" content="./assets/images/top/hero-image-01.webp">
     <meta property="og:url" content="https://to-place.co.jp">
     <meta property="og:type" content="website">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="TO PLACE株式会社">
+    <meta name="twitter:title" content="株式会社TO PLACE">
     <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta name="twitter:image" content="./assets/images/top/hero-image-01.webp">
     <!-- Canonical URL -->
@@ -97,7 +97,7 @@
         <header>
           <a href="./index.html">
             <h1>
-              <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
+              <img src="./assets/images/logo.svg" alt="株式会社TO PLACE">
               TO PLACE
             </h1>
           </a>
@@ -113,11 +113,11 @@
                 <li>CAREERS</li>
               </ol>
             </nav>
-            <img src="./assets/images/careers/careers-hero.webp" alt="採用情報ヒーロー画像|TO PLACE株式会社">
+            <img src="./assets/images/careers/careers-hero.webp" alt="採用情報ヒーロー画像|株式会社TO PLACE">
           </div>
           <div class="careers-info">
             <h2 class="text-effect">採用情報-仕入れ営業-</h2>
-            <p class="text-effect">渋谷区・新宿区・港区・中央区・千代田区などの東京都心部を中心とした東京２３区内の不動産情報を売買仲介会社様から取得し、マーケティング・現地調査・役所調査などを行う不動産仕入業務です。仕入れる物件は2億円程度までの不動産。今後は、事業拡大のため商業地などの収益用地も積極的に仕入れる予定です。</p>
+            <p class="text-effect">渋谷区・新宿区・港区・中央区・千代田区などの東京都心部を中心とした東京23区内の不動産情報を売買仲介会社様から取得し、マーケティング・現地調査・役所調査などを行う不動産仕入業務です。仕入れる物件は2億円程度までの不動産。今後は、事業拡大のため商業地などの収益用地も積極的に仕入れる予定です。</p>
           <div class="container-section">
             <section class="text-section">
               <h2 class="text-effect">-仕事の流れ-</h2>
@@ -137,36 +137,36 @@
               <p class="text-effect">不動産業界経験者・宅地建物取引士の資格をお持ちの方</p>
                <h3 class="text-effect">【想定年収】</h3>
               <h4 class="text-effect">仕入営業未経験者</h4>
-              <p class="text-effect">月給２８万円～ + 報奨金（利益の5%～、契約を重ねる毎に利率がUP）</p>
+              <p class="text-effect">月給28万円～ + 報奨金（利益の5%～、契約を重ねる毎に利率がUP）</p>
               <h4 class="text-effect">仕入営業経験者</h4>
-              <p class="text-effect">月給　応相談　※遠慮なくご希望を提示してください</p>
-              <p class="text-effect">〇宅建有資格者　月給に２万円加算</p>
+              <p class="text-effect">月給 応相談 ※遠慮なくご希望を提示してください</p>
+              <p class="text-effect">〇宅建有資格者 月給に2万円加算</p>
                <h3 class="text-effect">【諸手当】</h3>
-              <p class="text-effect">資格手当（宅地建物取引士：月２万円）<br>交通費全額支給</p>
+              <p class="text-effect">資格手当（宅地建物取引士:月2万円）<br>交通費全額支給</p>
                <h3 class="text-effect">【勤務時間】</h3>
               <p class="text-effect">9:00〜18:00（実働8時間）</p>
                <h3 class="text-effect">【勤務地】</h3>
               <p class="text-effect">恵比寿本社</p>
                <h3 class="text-effect">【最寄り駅】</h3>
-              <p class="text-effect">JR山手線・JR埼京線「恵比寿」駅　徒歩１分<br>
-                日比谷線「恵比寿」駅　徒歩２分</p>
+              <p class="text-effect">JR山手線・JR埼京線「恵比寿」駅 徒歩1分<br>
+                日比谷線[恵比寿]駅 徒歩２分</p>
                <h3 class="text-effect">【選考プロセス】</h3>
-              <p class="text-effect">応募　→　書類選考　→　面談　→　内定</p>
+              <p class="text-effect">応募 → 書類選考 → 面談 → 内定</p>
             </section>
             <section class="image-section">
               <div class="img">
                 <div class="img-container">
-                  <img src="./assets/images/careers/careers-image-01.webp" alt="採用情報イメージ写真01|TO PLACE株式会社">
+                  <img src="./assets/images/careers/careers-image-01.webp" alt="採用情報イメージ写真01|株式会社TO PLACE">
                 </div>
               </div>
               <div class="img img-right">
                 <div class="img-container">
-                  <img src="./assets/images/careers/careers-image-02.webp" alt="採用情報イメージ写真02|TO PLACE株式会社">
+                  <img src="./assets/images/careers/careers-image-02.webp" alt="採用情報イメージ写真02|株式会社TO PLACE">
                 </div>
               </div>
               <div class="img">
                 <div class="img-container">
-                  <img src="./assets/images/careers/careers-image-03.webp" alt="採用情報イメージ写真03|TO PLACE株式会社">
+                  <img src="./assets/images/careers/careers-image-03.webp" alt="採用情報イメージ写真03|株式会社TO PLACE">
                 </div>
               </div>
             </section>
@@ -178,7 +178,7 @@
             <section class="left-section">
               <h2><img src="./assets/images/footer/footer-logo.png" alt=""></h2>
               <a href="./policy.html">プライバシーポリシー</a>
-              <p>&copy;TO PLACE株式会社</p>
+              <p>&copy;株式会社TO PLACE</p>
             </section>
             <section class="right-section">
               <dl>
@@ -189,15 +189,15 @@
               </dl>
               <dl>
                 <dt>宅建業免許</dt>
-                <dd>東京都知事（１）第１０９４０９号</dd>
+                <dd>東京都知事(1)第109409号</dd>
               </dl>
               <dl>
                 <dt>所在地</dt>
-                <dd>東京都渋谷区恵比寿１－８－６　共同ビル７階</dd>
+                <dd>東京都渋谷区恵比寿1-8-6共同ビル7階</dd>
               </dl>
                 <dl>
                   <dt>代表番号</dt>
-                  <dd>０３－６８２４－６３６８</dd>
+                  <dd>03-6824-6368</dd>
                 </dl>
             </section>
           </section>
