--- a/src/sales.html
+++ b/src/sales.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO PLACE株式会社|販売実績ページ</title>
+    <title>株式会社TO PLACE|販売実績ページ</title>
     <meta name="description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-    <meta name="author" content="TO PLACE株式会社">
+    <meta name="author" content="株式会社TO PLACE">
     <meta name="robots" content="index, follow">
     <!-- Facebook Meta Tags -->
-    <meta property="og:title" content="TO PLACE株式会社">
+    <meta property="og:title" content="株式会社TO PLACE">
     <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta property="og:image" content="./assets/images/top/hero-image-01.webp">
     <meta property="og:url" content="https://to-place.co.jp">
     <meta property="og:type" content="website">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="TO PLACE株式会社">
+    <meta name="twitter:title" content="株式会社TO PLACE">
     <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta name="twitter:image" content="./assets/images/top/hero-image-01.webp">
     <!-- Canonical URL -->
@@ -97,7 +97,7 @@
         <header>
           <a href="./index.html">
             <h1>
-              <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
+              <img src="./assets/images/logo.svg" alt="株式会社TO PLACE">
               TO PLACE
             </h1>
           </a>
@@ -113,7 +113,7 @@
                 <li>SALES RECORD</li>
               </ol>
             </nav>
-            <img src="./assets/images/sales/sales-hero.webp" alt="SALESヒーロー画像|TO PLACE株式会社" />
+            <img src="./assets/images/sales/sales-hero.webp" alt="SALESヒーロー画像|株式会社TO PLACE" />
           </div>
           <div class="business-info">
             <h2 class="text-effect">販売実績</h2>
@@ -131,7 +131,7 @@
                 <div class="container02-inner">
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">南品川５丁目 土地</h2>
@@ -144,7 +144,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-minamisenzoku.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-minamisenzoku.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">南千束３丁目 土地</h2>
@@ -157,7 +157,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-morishita.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-morishita.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">森下２丁目 戸建</h2>
@@ -170,7 +170,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-ebisu.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-ebisu.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">恵比寿南３丁目 土地</h2>
@@ -183,7 +183,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-nihonbashi.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-nihonbashi.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">日本橋久松町 土地</h2>
@@ -202,7 +202,7 @@
                 <div class="container02-inner">
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">南品川５丁目 土地</h2>
@@ -215,7 +215,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-minamisenzoku.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-minamisenzoku.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">南千束３丁目 土地</h2>
@@ -228,7 +228,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-morishita.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-morishita.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">森下２丁目 戸建</h2>
@@ -241,7 +241,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-ebisu.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-ebisu.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">恵比寿南３丁目 土地</h2>
@@ -254,7 +254,7 @@
   
                   <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-nihonbashi.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-nihonbashi.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">日本橋久松町 土地</h2>
@@ -273,7 +273,7 @@
                 <div class="container02-inner">
                   <!-- <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">南品川５丁目 土地</h2>
@@ -291,7 +291,7 @@
                 <div class="container02-inner">
                   <!-- <section class="item">
                     <figure>
-                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="株式会社TO PLACE販売実績イメージ写真" class="hover-image">
                     </figure>
                     <div class="item-text">
                       <h2 class="text-effect">南品川５丁目 土地</h2>
@@ -315,9 +315,9 @@
             <section class="left-section">
               <h2><img src="./assets/images/footer/footer-logo.png" alt="" /></h2>
               <a href="./policy.html">プライバシーポリシー</a>
-              <p>©TO PLACE株式会社</p>
+              <p>©株式会社TO PLACE</p>
             </section>
-            <section class="right-section">
+            <section className="right-section">
               <dl>
                 <dt>事業内容</dt>
                 <dd>不動産ディベロップメント事業<br />
@@ -326,16 +326,15 @@
               </dl>
               <dl>
                 <dt>宅建業免許</dt>
-                <dd>東京都知事（１）第１０９４０９号</dd>
+                <dd>東京都知事(1)第109409号</dd>
               </dl>
               <dl>
-                
                 <dt>所在地</dt>
-                <dd>東京都渋谷区恵比寿１－８－６　共同ビル７階</dd>
+                <dd>東京都渋谷区恵比寿1-8-6共同ビル7階</dd>
               </dl>
                 <dl>
                   <dt>代表番号</dt>
-                  <dd>０３－６８２４－６３６８</dd>
+                  <dd>03-6824-6368</dd>
                 </dl>
             </section>
           </section>
