--- a/src/business.html
+++ b/src/business.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO PLACE株式会社|事業案内ページ</title>
+    <title>株式会社TO PLACE|事業案内ページ</title>
     <meta name="description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-    <meta name="author" content="TO PLACE株式会社">
+    <meta name="author" content="株式会社TO PLACE">
     <meta name="robots" content="index, follow">
     <!-- Facebook Meta Tags -->
-    <meta property="og:title" content="TO PLACE株式会社">
+    <meta property="og:title" content="株式会社TO PLACE">
     <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta property="og:image" content="./assets/images/top/hero-image-01.webp">
     <meta property="og:url" content="https://to-place.co.jp">
     <meta property="og:type" content="website">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="TO PLACE株式会社">
+    <meta name="twitter:title" content="株式会社TO PLACE">
     <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
     <meta name="twitter:image" content="./assets/images/top/hero-image-01.webp">
     <!-- Canonical URL -->
@@ -97,7 +97,7 @@
         <header>
           <a href="./index.html">
             <h1>
-              <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
+              <img src="./assets/images/logo.svg" alt="株式会社TO PLACE">
               TO PLACE
             </h1>
           </a>
@@ -113,7 +113,7 @@
                 <li>OUR BUSINESS</li>
               </ol>
             </nav>
-            <img src="./assets/images/business/ourbusiness-hero.webp" alt="業務内容ヒーロー画像|TO PLACE株式会社">
+            <img src="./assets/images/business/ourbusiness-hero.webp" alt="業務内容ヒーロー画像|株式会社TO PLACE">
           </div>
           <div class="business-info">
             <h2 class="text-effect">事業案内</h2>
@@ -161,7 +161,7 @@
             <section class="left-section">
               <h2><img src="./assets/images/footer/footer-logo.png" alt=""></h2>
               <a href="./policy.html">プライバシーポリシー</a>
-              <p>&copy;TO PLACE株式会社</p>
+              <p>&copy;株式会社TO PLACE</p>
             </section>
             <section class="right-section">
               <dl>
@@ -172,15 +172,15 @@
               </dl>
               <dl>
                 <dt>宅建業免許</dt>
-                <dd>東京都知事（１）第１０９４０９号</dd>
+                <dd>東京都知事(1)第109409号</dd>
               </dl>
               <dl>
                 <dt>所在地</dt>
-                <dd>東京都渋谷区恵比寿１－８－６　共同ビル７階</dd>
+                <dd>東京都渋谷区恵比寿1-8-6共同ビル7階</dd>
               </dl>
                 <dl>
                   <dt>代表番号</dt>
-                  <dd>０３－６８２４－６３６８</dd>
+                  <dd>03-6824-6368</dd>
                 </dl>
             </section>
           </section>
