--- a/src/policy.html
+++ b/src/policy.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TO PLACE株式会社|プライバシーポリシーページ</title>
+  <title>株式会社TO PLACE|プライバシーポリシーページ</title>
   <meta name="description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-  <meta name="author" content="TO PLACE株式会社">
+  <meta name="author" content="株式会社TO PLACE">
   <meta name="robots" content="index, follow">
   <!-- Facebook Meta Tags -->
-  <meta property="og:title" content="TO PLACE株式会社">
+  <meta property="og:title" content="株式会社TO PLACE">
   <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
   <meta property="og:image" content="./assets/images/top/hero-image-01.webp">
   <meta property="og:url" content="https://to-place.co.jp">
   <meta property="og:type" content="website">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="TO PLACE株式会社">
+  <meta name="twitter:title" content="株式会社TO PLACE">
   <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
   <meta name="twitter:image" content="./assets/images/top/hero-image-01.webp">
   <!-- Canonical URL -->
@@ -98,7 +98,7 @@
       <header>
         <a href="./index.html">
           <h1>
-            <img src="./assets/images/logo.svg" alt="TO PLACE株式会社">
+            <img src="./assets/images/logo.svg" alt="株式会社TO PLACE">
             TO PLACE
           </h1>
         </a>
@@ -109,7 +109,7 @@
         <div class="wrapper">
             <h2 class="text-effect">プライバシーポリシー</h2>
     
-            <p class="text-effect">TO PLACE株式会社（以下「当社」といいます。）は、当社がTO PLACE株式会社のサイト
+            <p class="text-effect">株式会社TO PLACE（以下「当社」といいます。）は、当社が株式会社TO PLACEのサイト
             利用（以下「本サービス」といいます。）を提供するにあたり、ご利用される皆様（以下「利用
             者」といいます。）の個人に関する情報（以下「個人情報」といいます。）を取得します。</p>
            <p class="text-effect">第1条 （適用範囲）</p>
@@ -117,25 +117,25 @@
             情報を取得、利用及び管理するときに適用されます。</p>
            <p class="text-effect">第2条 （取得する情報）<p>
            <p class="text-effect">当社は、利用者から以下の情報を取得します。</p>
-           <p class="text-effect">(1) 氏名</p>
-           <p class="text-effect">(2) 住所</p>
-           <p class="text-effect">(3) 生年月日</p>
-           <p class="text-effect">(4) 年齢</p>
-           <p class="text-effect">(5) 連絡先</p>
-           <p class="text-effect">(6) 位置情報</p>
-           <p class="text-effect">(7) IPアドレス</p>
-           <p class="text-effect">(8) 閲覧したURL及び日時に関するタイムスタンプ</p>
+           <p class="text-effect">(1)氏名</p>
+           <p class="text-effect">(2)住所</p>
+           <p class="text-effect">(3)生年月日</p>
+           <p class="text-effect">(4)年齢</p>
+           <p class="text-effect">(5)連絡先</p>
+           <p class="text-effect">(6)位置情報</p>
+           <p class="text-effect">(7)IPアドレス</p>
+           <p class="text-effect">(8)閲覧したURL及び日時に関するタイムスタンプ</p>
            <p class="text-effect">第3条 （利用目的）</p>
            <p class="text-effect">当社が個人情報を収集・利用する目的は、以下のとおりです。<p>
-           <p class="text-effect">(1) 本サービスの提供・運営のため</p>
-           <p class="text-effect">(2) 本サービスに関する新機能、更新情報をお知らせするため</p>
-           <p class="text-effect">(3) メールマガジンの送信、ダイレクトメールの送付のため</p>
-           <p class="text-effect">(4) 広告効果の分析、市場分析、マーケティングのため</p>
-           <p class="text-effect">(5) 本サービスの各種問合せ、アフターサービス対応のため</p>
-           <p class="text-effect">(6) 不正アクセス、不正利用の防止のため</p>
-           <p class="text-effect">(7) 本サービスその他のコンテンツの開発・改善のため</p>
-           <p class="text-effect">(8) 当社が実施するサービス又は企画に関する連絡のため</p>
-           <p class="text-effect">(9) 上記の利用目的に付随する目的</p>
+           <p class="text-effect">(1)本サービスの提供・運営のため</p>
+           <p class="text-effect">(2)本サービスに関する新機能、更新情報をお知らせするため</p>
+           <p class="text-effect">(3)メールマガジンの送信、ダイレクトメールの送付のため</p>
+           <p class="text-effect">(4)広告効果の分析、市場分析、マーケティングのため</p>
+           <p class="text-effect">(5)本サービスの各種問合せ、アフターサービス対応のため</p>
+           <p class="text-effect">(6)不正アクセス、不正利用の防止のため</p>
+           <p class="text-effect">(7)本サービスその他のコンテンツの開発・改善のため</p>
+           <p class="text-effect">(8)当社が実施するサービス又は企画に関する連絡のため</p>
+           <p class="text-effect">(9)上記の利用目的に付随する目的</p>
            <p class="text-effect">第4条 （Cookieの利用）</p>
            <p class="text-effect">当社は、ウェブサイト及び本サービス（以下、これらを総称して「ウェブサイト等」といい
             ます。）のアクセス及び利用状況の分析、広告配信並びにウェブサイト等の利便性向上
@@ -152,38 +152,38 @@
             管理のために必要な措置を講じます。当社が、安全管理のために講じた措置の概要は
             以下のとおりです。措置の具体的内容については、本ポリシーで定める窓口に対する
             利用者からの求めに応じて遅滞なく回答いたします。</p>
-           <p class="text-effect">(1) 基本方針の策定、個人情報の取扱いに係る規律の整備</p>
-           <p class="text-effect">(2) 個人情報の取扱責任者や報告連絡体制の整備</p>
-           <p class="text-effect">(3) 定期的な研修の実施</p>
-           <p class="text-effect">(4) 個人情報についての秘密保持に関する誓約を従業者から取得</p>
-           <p class="text-effect">(5) 個人情報についての秘密保持に関する事項を就業規則に記載</p>
-           <p class="text-effect">(6) 責任者以外個人情報を容易に閲覧できないような措置（間仕切りやICカードに
+           <p class="text-effect">(1)基本方針の策定、個人情報の取扱いに係る規律の整備</p>
+           <p class="text-effect">(2)個人情報の取扱責任者や報告連絡体制の整備</p>
+           <p class="text-effect">(3)定期的な研修の実施</p>
+           <p class="text-effect">(4)個人情報についての秘密保持に関する誓約を従業者から取得</p>
+           <p class="text-effect">(5)個人情報についての秘密保持に関する事項を就業規則に記載</p>
+           <p class="text-effect">(6)責任者以外個人情報を容易に閲覧できないような措置（間仕切りやICカードに
             よる入退室管理等も含む）の実施</p>
-           <p class="text-effect">(7) 個人情報を取り扱う機器等の盗難紛失等を防止するための措置（機器の書庫
+           <p class="text-effect">(7)個人情報を取り扱う機器等の盗難紛失等を防止するための措置（機器の書庫
             への保管、パスワードの設定等を含む）を実施</p>
-           <p class="text-effect">(8) 個人情報を取り扱うことのできる機器やアクセス権者を明確にし、個人情報へ
+           <p class="text-effect">(8)個人情報を取り扱うことのできる機器やアクセス権者を明確にし、個人情報へ
             の不要なアクセスを防止</p>
-           <p class="text-effect">(9) メール等により取扱う際に、パスワードを設定</p>
-           <p class="text-effect">(10) 個人情報を取り扱う機器等のOSを最新の状態に保持</p>
-           <p class="text-effect">(11) 個人情報を取り扱う機器等にセキュリティ対策ソフトウェア等を導入</p>
+           <p class="text-effect">(9)メール等により取扱う際に、パスワードを設定</p>
+           <p class="text-effect">(10)個人情報を取り扱う機器等のOSを最新の状態に保持</p>
+           <p class="text-effect">(11)個人情報を取り扱う機器等にセキュリティ対策ソフトウェア等を導入</p>
            <p class="text-effect">第6条 （個人情報の第三者への提供）</p>
            <p class="text-effect">1 当社は、次に掲げる場合を除いて、あらかじめ利用者の同意を得ないで、取得した
             個人情報を第三者に提供することはありません。</p>
-           <p class="text-effect">(1) 法令に基づく場合</p>
-           <p class="text-effect">(2) 人の生命、身体又は財産の保護のために必要がある場合であって、利用者の
+           <p class="text-effect">(1)法令に基づく場合</p>
+           <p class="text-effect">(2)人の生命、身体又は財産の保護のために必要がある場合であって、利用者の
             同意を得ることが困難であるとき。</p>
-           <p class="text-effect">(3) 公衆衛生の向上又は児童の健全な育成の推進のために特に必要がある場合
+           <p class="text-effect">(3)公衆衛生の向上又は児童の健全な育成の推進のために特に必要がある場合
             であって、利用者の同意を得ることが困難であるとき。</p>
-           <p class="text-effect">(4) 国の機関若しくは地方公共団体又はその委託を受けた者が法令の定める事務
+           <p class="text-effect">(4)国の機関若しくは地方公共団体又はその委託を受けた者が法令の定める事務
             を遂行することに対して協力する必要がある場合であって、利用者の同意を得
             ることにより当該事務の遂行に支障を及ぼすおそれがあるとき。</p>
-           <p class="text-effect">(5) その他法令で第三者提供の制限の例外が認められている場合</p>
+           <p class="text-effect">(5)その他法令で第三者提供の制限の例外が認められている場合</p>
            <p class="text-effect">2 前項の定めにかかわらず、次に掲げる場合には、当該個人情報の提供先は第三
             者に該当しないものとします。</p>
-           <p class="text-effect">(1) 当社が利用目的の達成に必要な範囲内において個人情報の取扱いの全部又
+           <p class="text-effect">(1)当社が利用目的の達成に必要な範囲内において個人情報の取扱いの全部又
             は一部を委託することに伴って当該個人情報が提供される場合</p>
-           <p class="text-effect">(2) 合併その他の事由による事業の承継に伴って個人情報が提供される場合</p>
-           <p class="text-effect">(3) 第7条に定める共同利用者に対して提供される場合</p>
+           <p class="text-effect">(2)合併その他の事由による事業の承継に伴って個人情報が提供される場合</p>
+           <p class="text-effect">(3)第7条に定める共同利用者に対して提供される場合</p>
            <p class="text-effect">第7条 （個人情報の共同利用）</p>
            <p class="text-effect">当社は、特定の者との間で共同利用することを目的として個人情報を当該特定の者
             に提供することがあります。この場合、当社は、あらかじめ、共同して利用する個人情報
@@ -197,21 +197,21 @@
            <p class="text-effect">第9条 （開示、訂正等の手続）</p>
            <p class="text-effect">1 利用者は、本条及び当社の関連規程に従って、当社に対し、個人情報保護法にお
             いて認められる限度で、以下の求め又は請求を行うことができます。</p>
-           <p class="text-effect">(1) 個人情報の利用目的の通知の求め</p>
-           <p class="text-effect">(2) 個人情報又は第三者提供記録の開示の請求</p>
-           <p class="text-effect">(3) 個人情報の訂正、追加又は削除の請求</p>
-           <p class="text-effect">(4) 個人情報の利用の停止の請求</p>
-           <p class="text-effect">(5) 個人情報の第三者への提供の停止の請求</p>
+           <p class="text-effect">(1)個人情報の利用目的の通知の求め</p>
+           <p class="text-effect">(2)個人情報又は第三者提供記録の開示の請求</p>
+           <p class="text-effect">(3)個人情報の訂正、追加又は削除の請求</p>
+           <p class="text-effect">(4)個人情報の利用の停止の請求</p>
+           <p class="text-effect">(5)個人情報の第三者への提供の停止の請求</p>
            <p class="text-effect">2 前項の求め又は請求にあたっては、同項各号のうちいずれの請求か特定の上、本
             人確認のための書類（運転免許証、健康保険証、住民票の写し等）をご提出頂きま
             す。</p>
            <p class="text-effect">第10条 （お問い合わせ）</p>
            <p class="text-effect">当社の個人情報の取扱いに関するご相談や苦情等のお問い合わせについては、下
             記の窓口にご連絡ください。</p>
-           <p class="text-effect">個人情報取扱事業者：TO PLACE株式会社</p>
-           <p class="text-effect">代表者名：坂本　絢子</p>
-           <p class="text-effect">住所：東京都渋谷区恵比寿1-8-6　共同ビル7階</p>
-           <p class="text-effect">Eメールアドレス：info@to-place.co.jp</p>
+           <p class="text-effect">個人情報取扱事業者:株式会社TO PLACE</p>
+           <p class="text-effect">代表者名：坂本絢子</p>
+           <p class="text-effect">住所:東京都渋谷区恵比寿1-8-6 共同ビル7階</p>
+           <p class="text-effect">Eメールアドレス:info@to-place.co.jp</p>
         </div>
             
           </main>
@@ -222,7 +222,7 @@
             <section class="left-section">
               <h2><img src="./assets/images/footer/footer-logo.png" alt=""></h2>
               <a href="#">プライバシーポリシー</a>
-              <p>&copy;TO PLACE株式会社</p>
+              <p>&copy;株式会社TO PLACE</p>
             </section>
             <section class="right-section">
               <dl>
@@ -233,15 +233,15 @@
               </dl>
               <dl>
                 <dt>宅建業免許</dt>
-                <dd>東京都知事（１）第１０９４０９号</dd>
+                <dd>東京都知事(1)第109409号</dd>
               </dl>
               <dl>
                 <dt>所在地</dt>
-                <dd>東京都渋谷区恵比寿１－８－６　共同ビル７階</dd>
+                <dd>東京都渋谷区恵比寿1-8-6共同ビル7階</dd>
               </dl>
                 <dl>
                   <dt>代表番号</dt>
-                  <dd>０３－６８２４－６３６８</dd>
+                  <dd>03-6824-6368</dd>
                 </dl>
             </section>
           </section>
