--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,18 @@
   <meta name="description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
   <meta name="author" content="株式会社TO PLACE">
   <meta name="robots" content="index, follow">
-  <!-- Facebook Meta Tags -->
-  <meta property="og:title" content="株式会社TO PLACE">
-  <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-  <meta property="og:image" content="./assets/images/top/hero-image-01.webp">
-  <meta property="og:url" content="https://to-place.co.jp">
-  <meta property="og:type" content="website">
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="株式会社TO PLACE">
-  <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-  <meta name="twitter:image" content="./assets/images/top/hero-image-01.webp">
-  <!-- Canonical URL -->
+    <!-- Facebook Meta Tags -->
+    <meta property="og:title" content="株式会社TO PLACE">
+    <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
+    <meta property="og:image" content="https://to-place.co.jp/assets/images/top/hero-image-01.webp">
+    <meta property="og:url" content="https://to-place.co.jp">
+    <meta property="og:type" content="website">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="株式会社TO PLACE">
+    <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
+    <meta name="twitter:image" content="https://to-place.co.jp/assets/images/top/hero-image-01.webp">
+    <!-- Canonical URL -->
   <link rel="canonical" href="https://to-place.co.jp">
   <!-- Favicon -->
   <link rel="icon" href="./assets/images/toplace-favicon.ico" type="image/x-icon">
