--- a/src/sales.html
+++ b/src/sales.html
@@ -11,14 +11,14 @@
     <!-- Facebook Meta Tags -->
     <meta property="og:title" content="株式会社TO PLACE">
     <meta property="og:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-    <meta property="og:image" content="https://to-place.co.jp/assets/images/top/hero-image-01.webp">
+    <meta property="og:image" content="https://to-place.co.jp/assets/images/ogp/hero-image-01-FB.jpg">
     <meta property="og:url" content="https://to-place.co.jp">
     <meta property="og:type" content="website">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="株式会社TO PLACE">
     <meta name="twitter:description" content="渋谷区・港区・新宿区・中央区などの都心部を主軸とした東京２３区内において、不動産ディベロップメント事業を展開">
-    <meta name="twitter:image" content="https://to-place.co.jp/assets/images/top/hero-image-01.webp">
+    <meta name="twitter:image" content="https://to-place.co.jp/assets/images/ogp/hero-image-01-FB.jpg">
     <!-- Canonical URL -->
     <link rel="canonical" href="https://to-place.co.jp">
     <!-- Favicon -->
